Add a link to the prettier header.

--- a/index.html
+++ b/index.html
@@ -18,10 +18,13 @@
       window.$docsify = {
         name: 'Jordan Davidson',
         repo: 'github.com/from-nibly/resume',
+        homepage: 'README.md',
+        basePath: '/',
         coverpage: true,
         loadSidebar: true,
         subMaxLevel: 2,
         maxLevel: 4,
+        auto2top: true,
         markdown: {
           renderer: {
             table: function(header, body) {
