--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         subMaxLevel: 2,
         maxLevel: 4,
         auto2top: true,
+        ga: 'UA-143079631-1',
         markdown: {
           renderer: {
             table: function(header, body) {
@@ -41,5 +42,6 @@
       };
     </script>
     <script src="//unpkg.com/docsify/lib/docsify.min.js"></script>
+    <script src="//unpkg.com/docsify/lib/plugins/ga.min.js"></script>
   </body>
 </html>
