Add New Work Experience

--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
       name="viewport"
       content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
     />
-    <link rel="stylesheet" href="//unpkg.com/docsify/lib/themes/vue.css" />
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/docsify/lib/themes/vue.css"
+    />
   </head>
   <body>
     <div id="app"></div>
@@ -28,7 +31,7 @@
         ga: 'UA-143079631-1',
         markdown: {
           renderer: {
-            table: function(header, body) {
+            table: function (header, body) {
               items = ['<table>', '</table>'];
               if (header.indexOf('!no-header!') !== -1) {
                 items.splice(1, 0, body);
@@ -36,12 +39,12 @@
                 items.splice(1, 0, header, body);
               }
               return items.join('');
-            }
-          }
-        }
+            },
+          },
+        },
       };
     </script>
-    <script src="//unpkg.com/docsify/lib/docsify.min.js"></script>
-    <script src="//unpkg.com/docsify/lib/plugins/ga.min.js"></script>
+    <script src="https://unpkg.com/docsify/lib/docsify.min.js"></script>
+    <script src="https://unpkg.com/docsify/lib/plugins/ga.min.js"></script>
   </body>
 </html>
